add svg and animate them in the www page

--- a/pages/www.html
+++ b/pages/www.html
@@ -29,7 +29,159 @@
             </ul>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <div class="container-1 animationTwo">
+            <svg viewBox="0 0 500 500" height="150px" width="150px" version="1.1" id="Layer_1"
+                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                viewBox="0 0 511.999 511.999" xml:space="preserve" fill="#000000">
+                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                <g id="SVGRepo_iconCarrier">
+                    <polygon style="fill: #f7b239"
+                        points="306.786,226.683 285.318,255.998 306.786,285.314 270.655,281.39 256.003,314.64 241.34,281.39 205.22,285.314 226.677,255.998 205.22,226.683 241.34,230.607 256.003,197.356 270.655,230.607 ">
+                    </polygon>
+                    <g>
+                        <path style="fill: #333333"
+                            d="M257.01,170.924c-0.031,0-0.062,0-0.094,0c-4.697-0.051-8.463-3.9-8.412-8.597l1.669-153.914 c0.05-4.696,3.861-8.465,8.597-8.412c4.697,0.051,8.463,3.9,8.412,8.597l-1.669,153.914 C265.463,167.177,261.664,170.924,257.01,170.924z">
+                        </path>
+                        <path style="fill: #333333"
+                            d="M253.322,511.999c-0.031,0-0.062,0-0.094,0c-4.697-0.051-8.463-3.9-8.412-8.597l1.669-153.901 c0.05-4.696,3.868-8.457,8.597-8.412c4.697,0.051,8.463,3.9,8.412,8.597l-1.669,153.901 C261.775,508.251,257.976,511.999,253.322,511.999z">
+                        </path>
+                        <path style="fill: #333333"
+                            d="M322.885,199.047c-2.208,0-4.414-0.854-6.08-2.556c-3.285-3.357-3.228-8.742,0.13-12.028 L426.95,76.81c3.358-3.285,8.742-3.228,12.028,0.13c3.285,3.357,3.228,8.742-0.13,12.028L328.833,196.622 C327.179,198.24,325.031,199.047,322.885,199.047z">
+                        </path>
+                        <path style="fill: #333333"
+                            d="M79.101,437.616c-2.208,0-4.414-0.854-6.08-2.556c-3.285-3.357-3.228-8.742,0.13-12.028 l110.004-107.644c3.358-3.285,8.742-3.228,12.028,0.13c3.285,3.357,3.228,8.742-0.13,12.028L85.049,435.19 C83.393,436.808,81.247,437.616,79.101,437.616z">
+                        </path>
+                        <path style="fill: #333333"
+                            d="M503.495,267.183c-0.031,0-0.062,0-0.094,0l-153.914-1.669c-4.697-0.051-8.463-3.9-8.412-8.597 c0.05-4.665,3.849-8.412,8.503-8.412c0.031,0,0.062,0,0.094,0l153.914,1.669c4.697,0.051,8.463,3.9,8.412,8.597 C511.948,263.435,508.15,267.183,503.495,267.183z">
+                        </path>
+                        <path style="fill: #333333"
+                            d="M162.407,263.496c-0.031,0-0.062,0-0.094,0l-153.9-1.67c-4.697-0.051-8.463-3.9-8.412-8.597 c0.05-4.665,3.849-8.412,8.503-8.412c0.031,0,0.062,0,0.094,0l153.9,1.669c4.697,0.051,8.463,3.9,8.412,8.597 C170.861,259.747,167.062,263.496,162.407,263.496z">
+                        </path>
+                        <path style="fill: #333333"
+                            d="M429.111,441.403c-2.208,0-4.414-0.854-6.08-2.556L315.378,328.834 c-3.285-3.357-3.228-8.742,0.13-12.028c3.358-3.284,8.742-3.228,12.028,0.13L435.189,426.95c3.285,3.357,3.228,8.742-0.13,12.028 C433.404,440.596,431.256,441.403,429.111,441.403z">
+                        </path>
+                        <path style="fill: #333333"
+                            d="M190.533,197.61c-2.208,0-4.414-0.854-6.08-2.556L76.81,85.049 c-3.285-3.357-3.228-8.742,0.13-12.028c3.358-3.284,8.741-3.228,12.028,0.13l107.643,110.004c3.285,3.357,3.228,8.742-0.13,12.028 C194.827,196.803,192.679,197.61,190.533,197.61z">
+                        </path>
+                        <path style="fill: #333333"
+                            d="M205.698,139.245c-3.372,0-6.563-2.017-7.895-5.338l-16.928-42.154 c-1.75-4.359,0.364-9.312,4.723-11.063c4.359-1.75,9.312,0.364,11.063,4.723l16.928,42.154c1.75,4.359-0.364,9.312-4.723,11.063 C207.826,139.047,206.752,139.245,205.698,139.245z">
+                        </path>
+                        <path style="fill: #333333"
+                            d="M323.234,431.923c-3.373,0-6.564-2.019-7.896-5.34l-16.912-42.146 c-1.749-4.359,0.366-9.312,4.726-11.06c4.358-1.752,9.311,0.366,11.06,4.726l16.912,42.146c1.749,4.359-0.366,9.312-4.726,11.06 C325.361,431.725,324.289,431.923,323.234,431.923z">
+                        </path>
+                        <path style="fill: #333333"
+                            d="M308.999,140.36c-1.114,0-2.247-0.22-3.336-0.685c-4.32-1.844-6.327-6.842-4.482-11.162 l17.838-41.774c1.845-4.32,6.841-6.326,11.162-4.482c4.32,1.844,6.327,6.842,4.482,11.162l-17.838,41.774 C315.446,138.423,312.302,140.36,308.999,140.36z">
+                        </path>
+                        <path style="fill: #333333"
+                            d="M185.155,430.428c-1.115,0-2.247-0.22-3.336-0.685c-4.32-1.845-6.327-6.843-4.482-11.162 l17.838-41.766c1.845-4.32,6.843-6.326,11.162-4.482c4.32,1.845,6.327,6.843,4.482,11.162l-17.838,41.766 C191.601,428.491,188.459,430.428,185.155,430.428z">
+                        </path>
+                        <path style="fill: #333333"
+                            d="M381.267,214.195c-3.372,0-6.563-2.019-7.895-5.339c-1.75-4.359,0.365-9.312,4.724-11.062 l43.032-17.275c4.355-1.75,9.312,0.365,11.062,4.724c1.75,4.359-0.365,9.312-4.724,11.062l-43.032,17.275 C383.395,213.997,382.323,214.195,381.267,214.195z">
+                        </path>
+                        <path style="fill: #333333"
+                            d="M88.586,331.739c-3.372,0-6.563-2.017-7.895-5.338c-1.75-4.359,0.364-9.312,4.723-11.063 l42.141-16.922c4.362-1.75,9.312,0.364,11.063,4.723c1.75,4.359-0.364,9.312-4.723,11.063l-42.141,16.922 C90.714,331.542,89.641,331.739,88.586,331.739z">
+                        </path>
+                        <path style="fill: #333333"
+                            d="M421.917,335.348c-1.115,0-2.248-0.22-3.337-0.686l-41.771-17.847 c-4.32-1.845-6.326-6.844-4.48-11.164c1.846-4.32,6.843-6.326,11.164-4.48l41.771,17.847c4.32,1.845,6.326,6.844,4.48,11.164 C428.362,333.411,425.22,335.348,421.917,335.348z">
+                        </path>
+                        <path style="fill: #333333"
+                            d="M131.836,211.498c-1.114,0-2.247-0.22-3.336-0.685l-41.761-17.832 c-4.32-1.844-6.327-6.842-4.482-11.162c1.845-4.321,6.842-6.327,11.162-4.482l41.762,17.832c4.32,1.844,6.327,6.842,4.482,11.162 C138.283,209.561,135.139,211.498,131.836,211.498z">
+                        </path>
+                        <path style="fill: #333333"
+                            d="M256,323.142c-3.37,0-6.423-1.99-7.782-5.074l-12.148-27.55l-29.932,3.255 c-3.353,0.363-6.6-1.284-8.285-4.203c-1.685-2.919-1.488-6.557,0.502-9.277l17.785-24.295l-17.785-24.295 c-1.99-2.719-2.188-6.358-0.502-9.277c1.685-2.919,4.933-4.57,8.285-4.203l29.933,3.255l12.148-27.55 c1.36-3.083,4.413-5.074,7.782-5.074l0,0c3.37,0,6.423,1.99,7.782,5.074l12.147,27.55l29.933-3.255 c3.349-0.367,6.599,1.284,8.285,4.203c1.685,2.919,1.488,6.557-0.502,9.277l-17.785,24.295l17.785,24.295 c1.99,2.719,2.188,6.358,0.502,9.277c-1.685,2.919-4.93,4.567-8.285,4.203l-29.932-3.255l-12.147,27.55 C262.423,321.152,259.37,323.142,256,323.142z M241.343,272.884c3.34,0,6.409,1.966,7.778,5.075l6.877,15.597l6.876-15.597 c1.496-3.393,5.018-5.429,8.703-5.024l16.945,1.843l-10.068-13.754c-2.19-2.992-2.19-7.057,0-10.048l10.068-13.754l-16.946,1.843 c-3.681,0.4-7.206-1.632-8.702-5.024l-6.876-15.597l-6.877,15.597c-1.496,3.393-5.022,5.424-8.702,5.024l-16.946-1.843 l10.068,13.754c2.19,2.992,2.19,7.057,0,10.048l-10.068,13.754l16.945-1.843C240.73,272.901,241.038,272.884,241.343,272.884z">
+                        </path>
+                        <circle style="fill: #333333" cx="483.832" cy="163.768" r="8.505"></circle>
+                        <circle style="fill: #333333" cx="351.341" cy="28.373" r="8.505"></circle>
+                        <circle style="fill: #333333" cx="161.92" cy="26.321" r="8.505"></circle>
+                        <circle style="fill: #333333" cx="26.527" cy="158.812" r="8.505"></circle>
+                        <circle style="fill: #333333" cx="24.475" cy="348.233" r="8.505"></circle>
+                        <circle style="fill: #333333" cx="156.964" cy="483.628" r="8.505"></circle>
+                        <circle style="fill: #333333" cx="346.385" cy="485.68" r="8.505"></circle>
+                        <circle style="fill: #333333" cx="481.779" cy="353.189" r="8.505"></circle>
+                    </g>
+                </g>
+            </svg>
+        </div>
+        <div class="container">
+            <div class="svg-container animationTwo">
+                <svg viewBox="0 0 500 500" height="150px" width="150px" version="1.1" id="Layer_1"
+                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve"
+                    fill="#000000">
+                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                    <g id="SVGRepo_iconCarrier">
+                        <g>
+                            <path style="fill: #f95428"
+                                d="M257.015,169.407c-0.027,0-0.055,0-0.082,0c-4.089-0.044-7.368-3.395-7.323-7.484l1.677-154.599 C251.331,3.262,254.638,0,258.688,0c0.027,0,0.055,0,0.082,0c4.089,0.044,7.368,3.395,7.323,7.484l-1.677,154.599 C264.374,166.144,261.067,169.407,257.015,169.407z">
+                            </path>
+                            <path style="fill: #f95428"
+                                d="M253.311,512c-0.027,0-0.055,0-0.082,0c-4.089-0.044-7.368-3.395-7.323-7.484l1.677-154.586 c0.044-4.062,3.35-7.324,7.402-7.324c0.027,0,0.055,0,0.082,0c4.089,0.044,7.368,3.395,7.323,7.484l-1.677,154.586 C260.669,508.738,257.362,512,253.311,512z">
+                            </path>
+                            <path style="fill: #f95428"
+                                d="M323.183,197.655c-1.923,0-3.842-0.744-5.292-2.226c-2.86-2.922-2.809-7.61,0.114-10.471 L428.509,76.827c2.922-2.859,7.611-2.808,10.471,0.114c2.86,2.922,2.809,7.61-0.114,10.471L328.361,195.543 C326.92,196.953,325.051,197.655,323.183,197.655z">
+                            </path>
+                            <path style="fill: #f95428"
+                                d="M78.314,437.285c-1.923,0-3.842-0.744-5.292-2.226c-2.86-2.922-2.809-7.61,0.114-10.471 L183.63,316.466c2.922-2.86,7.61-2.808,10.471,0.114c2.86,2.922,2.809,7.61-0.114,10.471L83.493,435.173 C82.052,436.583,80.181,437.285,78.314,437.285z">
+                            </path>
+                            <path style="fill: #f95428"
+                                d="M504.597,266.095c-0.027,0-0.055,0-0.082,0l-154.599-1.677c-4.089-0.044-7.368-3.395-7.323-7.484 c0.044-4.089,3.367-7.414,7.484-7.323l154.599,1.677c4.089,0.044,7.368,3.395,7.323,7.484 C511.954,262.832,508.648,266.095,504.597,266.095z">
+                            </path>
+                            <path style="fill: #f95428"
+                                d="M161.991,262.39c-0.027,0-0.055,0-0.082,0L7.324,260.712c-4.089-0.044-7.368-3.395-7.323-7.484 c0.044-4.089,3.438-7.372,7.484-7.323l154.585,1.677c4.089,0.044,7.368,3.395,7.323,7.484 C169.35,259.128,166.043,262.39,161.991,262.39z">
+                            </path>
+                            <path style="fill: #f95428"
+                                d="M429.881,441.09c-1.923,0-3.842-0.744-5.292-2.226L316.457,328.361 c-2.859-2.922-2.809-7.61,0.114-10.471c2.923-2.859,7.611-2.808,10.471,0.114l108.132,110.503c2.859,2.922,2.809,7.61-0.114,10.471 C433.619,440.387,431.749,441.09,429.881,441.09z">
+                            </path>
+                            <path style="fill: #f95428"
+                                d="M190.242,196.212c-1.923,0-3.842-0.744-5.292-2.226L76.827,83.491 c-2.86-2.922-2.809-7.61,0.114-10.471c2.924-2.86,7.611-2.808,10.471,0.114l108.122,110.494c2.86,2.922,2.809,7.61-0.114,10.471 C193.979,195.509,192.11,196.212,190.242,196.212z">
+                            </path>
+                        </g>
+                        <g>
+                            <path style="fill: #f7b239"
+                                d="M205.474,137.017c-2.709,0-5.273-1.621-6.345-4.29l-17.003-42.341 c-1.407-3.503,0.293-7.483,3.795-8.89c3.502-1.408,7.483,0.293,8.89,3.795l17.003,42.341c1.407,3.503-0.293,7.483-3.795,8.89 C207.184,136.858,206.322,137.017,205.474,137.017z">
+                            </path>
+                            <path style="fill: #f7b239"
+                                d="M323.534,430.998c-2.71,0-5.274-1.622-6.345-4.291l-16.987-42.333 c-1.406-3.503,0.295-7.483,3.798-8.888c3.503-1.406,7.483,0.295,8.888,3.798l16.987,42.333c1.406,3.503-0.295,7.483-3.798,8.888 C325.242,430.839,324.38,430.998,323.534,430.998z">
+                            </path>
+                            <path style="fill: #f7b239"
+                                d="M309.236,138.136c-0.895,0-1.804-0.177-2.68-0.55c-3.472-1.482-5.084-5.498-3.602-8.969 l17.917-41.96c1.482-3.471,5.497-5.084,8.969-3.602c3.472,1.482,5.084,5.498,3.602,8.969l-17.917,41.96 C314.416,136.58,311.891,138.136,309.236,138.136z">
+                            </path>
+                            <path style="fill: #f7b239"
+                                d="M184.84,429.496c-0.895,0-1.805-0.177-2.681-0.551c-3.472-1.482-5.084-5.498-3.601-8.969 l17.917-41.952c1.483-3.471,5.498-5.085,8.969-3.601c3.472,1.482,5.084,5.498,3.601,8.969l-17.917,41.952 C190.021,427.94,187.496,429.496,184.84,429.496z">
+                            </path>
+                            <path style="fill: #f7b239"
+                                d="M381.825,212.301c-2.709,0-5.274-1.622-6.345-4.29c-1.407-3.503,0.293-7.483,3.797-8.888 l43.223-17.352c3.503-1.408,7.483,0.293,8.888,3.797c1.407,3.503-0.293,7.483-3.797,8.888l-43.223,17.352 C383.534,212.142,382.672,212.301,381.825,212.301z">
+                            </path>
+                            <path style="fill: #f7b239"
+                                d="M87.842,330.367c-2.709,0-5.273-1.621-6.345-4.29c-1.407-3.503,0.293-7.483,3.795-8.89 l42.329-16.998c3.503-1.407,7.483,0.293,8.89,3.795c1.407,3.503-0.293,7.483-3.795,8.889l-42.329,16.998 C89.55,330.209,88.689,330.367,87.842,330.367z">
+                            </path>
+                            <path style="fill: #f7b239"
+                                d="M422.656,333.992c-0.896,0-1.805-0.177-2.681-0.551l-41.956-17.926c-3.471-1.483-5.083-5.5-3.6-8.97 c1.484-3.471,5.5-5.083,8.97-3.6l41.956,17.926c3.471,1.483,5.083,5.5,3.6,8.97C427.835,332.436,425.31,333.992,422.656,333.992z">
+                            </path>
+                            <path style="fill: #f7b239"
+                                d="M131.285,209.591c-0.895,0-1.804-0.177-2.68-0.55l-41.948-17.911 c-3.472-1.482-5.084-5.498-3.602-8.969c1.482-3.472,5.495-5.084,8.969-3.602l41.947,17.911c3.472,1.482,5.084,5.498,3.602,8.969 C136.465,208.035,133.94,209.591,131.285,209.591z">
+                            </path>
+                        </g>
+                        <g>
+                            <circle style="fill: #31af0e" cx="484.846" cy="163.358" r="8.543"></circle>
+                            <circle style="fill: #31af0e" cx="351.765" cy="27.361" r="8.543"></circle>
+                            <circle style="fill: #31af0e" cx="161.501" cy="25.299" r="8.543"></circle>
+                            <circle style="fill: #31af0e" cx="25.507" cy="158.38" r="8.543"></circle>
+                            <circle style="fill: #31af0e" cx="23.445" cy="348.644" r="8.543"></circle>
+                            <circle style="fill: #31af0e" cx="156.524" cy="484.641" r="8.543"></circle>
+                            <circle style="fill: #31af0e" cx="346.787" cy="486.703" r="8.543"></circle>
+                            <circle style="fill: #31af0e" cx="482.784" cy="353.622" r="8.543"></circle>
+                        </g>
+                        <polygon style="fill: #f7b239"
+                            points="282.256,193.498 279.149,230.23 315.516,224.204 289.525,250.344 321.257,269.105 284.544,272.424 296.792,307.191 266.536,286.134 253.57,320.642 243.928,285.062 211.814,303.163 227.298,269.709 191.062,262.933 224.428,247.259 201.026,218.777 236.659,228.215 237.041,191.354 258.271,221.49 ">
+                        </polygon>
+                    </g>
+                </svg>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
