--- a/pages/hogwarts.html
+++ b/pages/hogwarts.html
@@ -27,6 +27,22 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <h1>Memory Game</h1>
+        <section class="first-card card-position">
+            <p class="first-card__text card-text">Hogwarts</p>
+            <img src="../gif/memory game 23 gifs/10.gif" alt="first-image" class="first-card__img">
+        </section>
+        <section class="second-card card-position">
+            <p class="second-card__text card-text">Hogwarts</p>
+            <img src="../gif/memory game 23 gifs/12.gif" alt="second-image" class="second-card__img">
+        </section>
+        <section class="third-card card-position">
+            <p class="thirds-card__text card-text">Hogwarts</p>
+            <img src="../gif/memory game 23 gifs/13.gif" alt="second-image" width="220px" class="third-card__img">
+        </section>
+       
+    </main>
 </body>
 
 </html>
