--- a/pages/www.html
+++ b/pages/www.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <main>
-        <div class="container-1 animationTwo">
+        <div class="container-1 animationOne">
             <svg viewBox="0 0 500 500" height="150px" width="150px" version="1.1" id="Layer_1"
                 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                 viewBox="0 0 511.999 511.999" xml:space="preserve" fill="#000000">
