--- a/pages/hogwarts.html
+++ b/pages/hogwarts.html
@@ -47,31 +47,31 @@
             </section>
             <section class="forth-card card-position">
                 <p class="forth-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/8.gif" alt="forth-image" width="220px" class="third-card__img" />
+                <img src="../gif/memory game 23 gifs/8.gif" alt="forth-image" width="220px" class="forth-card__img" />
             </section>
             <section class="fifth-card card-position">
                 <p class="fifth-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/16.gif" alt="fifth-image" width="220px" class="third-card__img" />
+                <img src="../gif/memory game 23 gifs/16.gif" alt="fifth-image" width="220px" class="fifth-card__img" />
             </section>
             <section class="sixth-card card-position">
                 <p class="sixth-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/17.gif" alt="sixth-image" width="220px" class="third-card__img" />
+                <img src="../gif/memory game 23 gifs/17.gif" alt="sixth-image" width="220px" class="sixth-card__img" />
             </section>
             <section class="seventh-card card-position">
                 <p class="seventh-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/18.gif" alt="seventh-image" width="220px"
-                    class="third-card__img" />
+                    class="seventh-card__img" />
             </section>
             <section class="23-card card-position">
                 <p class="23-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/23.gif" alt="23-image" width="220px" class="third-card__img" />
+                <img src="../gif/memory game 23 gifs/23.gif" alt="23-image" width="220px" class="23-card__img" />
             </section>
         </div>
 
         <div class="flex-container-memory-cards second-row">
-            <section class="first-card card-position">
-                <p class="first-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/2.gif" alt="first-image" class="first-card__img" />
+            <section class="8-card card-position">
+                <p class="8-card__text card-text">Hogwarts</p>
+                <img src="../gif/memory game 23 gifs/2.gif" alt="8-image" class="8-card__img" />
             </section>
             <section class="seventh-card card-position">
                 <p class="seventh-card__text card-text">Hogwarts</p>
@@ -83,59 +83,58 @@
             </section>
             <section class="20-card card-position">
                 <p class="20-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/20.gif" alt="20-image" width="220px" class="third-card__img" />
+                <img src="../gif/memory game 23 gifs/20.gif" alt="20-image" width="220px" class="20-card__img" />
             </section>
-            <section class="20-card card-position">
-                <p class="20-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/14.gif" alt="20-image" width="220px" class="third-card__img" />
+            <section class="14-card card-position">
+                <p class="14-card__text card-text">Hogwarts</p>
+                <img src="../gif/memory game 23 gifs/14.gif" alt="14-image" width="220px" class="14-card__img" />
             </section>
             <section class="19-card card-position">
                 <p class="19-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/19.gif" alt="19-image" width="220px" class="third-card__img" />
+                <img src="../gif/memory game 23 gifs/19.gif" alt="19-image" width="220px" class="19-card__img" />
             </section>
             <section class="second-card card-position">
                 <p class="second-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/12.gif" alt="second-image" class="second-card__img" />
             </section>
-
             <section class="20-card card-position">
                 <p class="20-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/20.gif" alt="20-image" width="220px" class="third-card__img" />
+                <img src="../gif/memory game 23 gifs/20.gif" alt="20-image" width="220px" class="20-card__img" />
             </section>
         </div>
         <div class="flex-container-memory-cards third-row">
             <section class="seventh-card card-position">
                 <p class="seventh-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/18.gif" alt="seventh-image" width="220px"
-                    class="third-card__img" />
+                    class="seventh-card__img" />
             </section>
-            <section class="first-card card-position">
-                <p class="first-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/2.gif" alt="first-image" class="first-card__img" />
+            <section class="8-card card-position">
+                <p class="8-card__text card-text">Hogwarts</p>
+                <img src="../gif/memory game 23 gifs/2.gif" alt="8-image" class="8-card__img" />
             </section>
             <section class="19-card card-position">
                 <p class="19-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/19.gif" alt="19-image" width="220px" class="third-card__img" />
+                <img src="../gif/memory game 23 gifs/19.gif" alt="19-image" width="220px" class="19-card__img" />
             </section>
             <section class="fifth-card card-position">
                 <p class="fifth-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/16.gif" alt="fifth-image" width="220px" class="third-card__img" />
+                <img src="../gif/memory game 23 gifs/16.gif" alt="fifth-image" width="220px" class="fifth-card__img" />
             </section>
             <section class="third-card card-position">
-                <p class="thirds-card__text card-text">Hogwarts</p>
+                <p class="third-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/13.gif" alt="second-image" width="220px" class="third-card__img" />
             </section>
             <section class="forth-card card-position">
                 <p class="forth-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/8.gif" alt="forth-image" width="220px" class="third-card__img" />
+                <img src="../gif/memory game 23 gifs/8.gif" alt="forth-image" width="220px" class="forth-card__img" />
             </section>
             <section class="20-card card-position">
                 <p class="20-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/14.gif" alt="20-image" width="220px" class="third-card__img" />
+                <img src="../gif/memory game 23 gifs/14.gif" alt="20-image" width="220px" class="20-card__img" />
             </section>
             <section class="23-card card-position">
                 <p class="23-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/23.gif" alt="23-image" width="220px" class="third-card__img" />
+                <img src="../gif/memory game 23 gifs/23.gif" alt="23-image" width="220px" class="23-card__img" />
             </section>
         </div>
     </main>
