--- a/pages/hogwarts.html
+++ b/pages/hogwarts.html
@@ -35,57 +35,55 @@
         <div class="grid-container-memory-cards">
             <section class="first-card card-position">
                 <p class="first-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/10.gif" alt="first-image" class="first-card__img" />
+                <img src="../gif/memory game 23 gifs/10.gif" alt="first-image" class="item-1" />
             </section>
             <section class="second-card card-position">
                 <p class="second-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/12.gif" alt="second-image" class="second-card__img" />
+                <img src="../gif/memory game 23 gifs/12.gif" alt="second-image" class="item-2" />
             </section>
             <section class="third-card card-position">
                 <p class="third-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/13.gif" alt="3-image" width="220px" class="third-card__img" />
+                <img src="../gif/memory game 23 gifs/13.gif" alt="3-image" width="220px" class="item-3" />
             </section>
             <section class="forth-card card-position">
                 <p class="forth-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/8.gif" alt="forth-image" width="220px" class="forth-card__img" />
+                <img src="../gif/memory game 23 gifs/8.gif" alt="forth-image" width="220px" class="item-4" />
             </section>
             <section class="fifth-card card-position">
                 <p class="fifth-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/16.gif" alt="fifth-image" width="220px" class="fifth-card__img" />
+                <img src="../gif/memory game 23 gifs/16.gif" alt="fifth-image" width="220px" class="item-5" />
             </section>
             <section class="sixth-card card-position">
                 <p class="sixth-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/17.gif" alt="sixth-image" width="220px" class="sixth-card__img" />
+                <img src="../gif/memory game 23 gifs/17.gif" alt="sixth-image" width="220px" class="item-6" />
             </section>
             <section class="seventh-card card-position">
                 <p class="seventh-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/18.gif" alt="seventh-image" width="220px"
-                    class="seventh-card__img" />
+                <img src="../gif/memory game 23 gifs/18.gif" alt="seventh-image" width="220px" class="item-7" />
             </section>
             <section class="8-card card-position">
                 <p class="8-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/23.gif" alt="8-image" width="220px" class="8-card__img" />
+                <img src="../gif/memory game 23 gifs/23.gif" alt="8-image" width="220px" class="item-8" />
             </section>
             <section class="9-card card-position">
                 <p class="9-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/2.gif" alt="9-image" class="9-card__img" />
+                <img src="../gif/memory game 23 gifs/2.gif" alt="9-image" class="item-9" />
             </section>
             <section class="10-card card-position">
                 <p class="10-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/17.gif" alt="10-image" class="10-card__img" />
+                <img src="../gif/memory game 23 gifs/17.gif" alt="10-image" class="item-10" />
             </section>
-
             <section class="11-card card-position">
                 <p class="11-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/20.gif" alt="11-image" width="220px" class="11-card__img" />
+                <img src="../gif/memory game 23 gifs/20.gif" alt="11-image" width="220px" class="item-11" />
             </section>
             <section class="12-card card-position">
                 <p class="12-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/14.gif" alt="12-image" width="220px" class="12-card__img" />
+                <img src="../gif/memory game 23 gifs/14.gif" alt="12-image" width="220px" class="item-12" />
             </section>
             <section class="13-card card-position">
                 <p class="13-card__text card-text">Hogwarts</p>
-                <img src="../gif/memory game 23 gifs/19.gif" alt="13-image" width="220px" class="13-card__img" />
+                <img src="../gif/memory game 23 gifs/19.gif" alt="13-image" width="220px" class="item-13" />
             </section>
         </div>
     </main>
