--- a/pages/hogwarts.html
+++ b/pages/hogwarts.html
@@ -85,6 +85,10 @@
                 <p class="13-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/19.gif" alt="13-image" width="220px" class="item-13" />
             </section>
+            <section class="14-card card-position">
+                <p class="14-card__text card-text">Hogwarts</p>
+                <img src="../gif/memory game 23 gifs/9.gif" alt="14-image" width="220px" class="item-14" />
+            </section>
         </div>
     </main>
 </body>
