fix pages layout

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <meta name="keywords" content="wizard, witch, news" />
     <title>Daily News from the Wizarding World</title>
 
-    <link rel="stylesheet" href="./css/style.css" type="text/css" />
+
     <link rel="stylesheet" href="./css/normalize.css" type="text/css" />
+    <link rel="stylesheet" href="./css/navbar.css" type="text/css" />
+    <link rel="stylesheet" href="./css/style.css" type="text/css" />
     <script src="js/script.js" type="text/javascript"></script>
 </head>
 
-<body background="./images/Owls_Birds_Snowy_owl_Flight_Front_543052_2560x1440.jpg">
+<body>
     <header id="page-header">
         <nav class="main-nav">
             <ul>
