fix second page

--- a/pages/breaking-news.html
+++ b/pages/breaking-news.html
@@ -10,6 +10,7 @@
     <title>Breaking News</title>
 
     <link rel="stylesheet" href="../css/normalize.css" type="text/css" />
+    <link rel="stylesheet" href="../css/navbar.css" type="text/css" />
     <link rel="stylesheet" href="../css/breaking-news.css" type="text/css" />
 </head>
 
