fix third page - change positions of niffler

--- a/pages/fantastic-beasts.html
+++ b/pages/fantastic-beasts.html
@@ -8,10 +8,11 @@
     <meta name="description" content="fantastic-beasts" />
     <meta name="keywords" content="fanstastic, beasts" />
     <title>Fantastic Beasts and Where To Find Them</title>
-
-    <link rel="stylesheet" href="../css/normalize.css" type="text/css" />
-    <link rel="stylesheet" href="../css/fanstastic-beasts.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="../css/normalize.css" type="text/css" />
+    <link rel="stylesheet" href="../css/navbar.css" type="text/css" />
+    <link rel="stylesheet" href="../css/fanstastic-beasts.css" type="text/css" />
+
 </head>
 
 <body background="../images/Fantastic_Beasts_and_Where_to_Find_Them_Katherine_521899_2560x1440.jpg">
