switch things up

--- a/pages/fantastic-beasts.html
+++ b/pages/fantastic-beasts.html
@@ -37,8 +37,8 @@
             <img src="../gif/niffler-fantastic.gif" alt="niffler-hide" class="nifler-hide__img2" />
         </div>
         <div class="bowtruckle-hide">
-            <img src="../images/hide-bowtruckle-adj.JPG" alt="hide-bowtruckle" class="bowtruckle-hide__img1" />
-            <img src="../gif/4c10caa8f00ae73f366f2dbb997312fa.gif" alt="bowtruckle" class="bowtruckle-hide__img2" />
+            <img src="../images/hide bowtruckle.jpg" alt="hide-bowtruckle" class="bowtruckle-hide__img1" />
+            <img src="../gif/4c10caa8f00ae73f366f2dbb997312fa.gif" alt="bowtruckle" class="bowtruckle-hide__img2" width="520px" />
         </div>
         <div class="hippogriff-hide">
             <img src="../images/hide-hippogriff.jpg" alt="hide-hippogriff" class="hippogriff-hide__img1" />
