link navbar css to all pages

--- a/pages/hogwarts.html
+++ b/pages/hogwarts.html
@@ -10,6 +10,7 @@
     <title>Hogwarts</title>
 
     <link rel="stylesheet" href="../css/normalize.css" type="text/css" />
+    <link rel="stylesheet" href="../css/navbar.css" type="text/css" />
     <link rel="stylesheet" href="../css/hogwarts.css" type="text/css" />
 </head>
 
