--- a/pages/www.html
+++ b/pages/www.html
@@ -10,6 +10,7 @@
     <title>Weasleys' Wizard Wheezes</title>
 
     <link rel="stylesheet" href="../css/normalize.css" type="text/css" />
+    <link rel="stylesheet" href="../css/navbar.css" type="text/css" />
     <link rel="stylesheet" href="../css/www.css" type="text/css" />
 </head>
 
