--- a/pages/quidditch.html
+++ b/pages/quidditch.html
@@ -10,6 +10,7 @@
   <title>Quidditch</title>
 
   <link rel="stylesheet" href="../css/normalize.css" type="text/css" />
+  <link rel="stylesheet" href="../css/navbar.css" type="text/css" />
   <link rel="stylesheet" href="../css/quidditch.css" type="text/css" />
 </head>
 
