need more time to make letter by letter animation

--- a/pages/hogwarts.html
+++ b/pages/hogwarts.html
@@ -142,7 +142,7 @@
     <footer>
         <div class="tom-riddle-diary">
             <input type="text" class="riddle__input" id="nameInput" placeholder="Enter your name, please">
-            <button class="riddle__btn" onclick="greetUser()">Swish and flick</button>
+            <button class="riddle__btn" id="greetBtn" onclick="greetUser()">Swish and flick</button>
             <span id="greeting"></span>
         </div>
     </footer>
