add prefixes to hogwarts page - trying setTimeout

--- a/pages/hogwarts.html
+++ b/pages/hogwarts.html
@@ -141,9 +141,9 @@
     </main>
     <footer>
         <div class="tom-riddle-diary">
-            <input type="text" class="riddle__input" id="nameInput" placeholder="Enter your name, please">
-            <button class="riddle__btn" id="greetBtn" onclick="greetUser()">Swish and flick</button>
-            <span id="greeting"></span>
+            <input type="text" class="riddle__input" id="nameInput" placeholder="Enter your name, please" />
+            <button class="riddle__btn" onclick="greetUser()">Swish and flick</button>
+            <span class="tom-riddle__span" id="greeting"></span>
         </div>
     </footer>
 </body>
