--- a/pages/breaking-news.html
+++ b/pages/breaking-news.html
@@ -5,10 +5,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Annie Uchiha" />
-    <meta name="description" content="breaking-news" />
+    <meta name="description" content="breaking news in the wizarding world" />
     <meta name="keywords" content="wizard, witch, news" />
+    <link rel="shortcut icon" href="../favicon/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="../favicon/favicon-16x16.png" type="image/png" sizes="16x16" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png" type="image/png" />
+    <link rel="manifest" href="../favicon/site.webmanifest" />
+    <!-- Primary Meta Tags -->
     <title>Breaking News</title>
+    <meta name="title" content="Breaking News" />
+    <meta name="description" content="breaking news in the wizarding world" />
 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="Breaking News" />
+    <meta property="og:description" content="breaking news in the wizarding world" />
+    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="Breaking News" />
+    <meta property="twitter:description" content="breaking news in the wizarding world" />
+    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
+    <title>Breaking News</title>
     <link rel="stylesheet" href="../css/normalize.css" type="text/css" />
     <link rel="stylesheet" href="../css/navbar.css" type="text/css" />
     <link rel="stylesheet" href="../css/breaking-news.css" type="text/css" />
