add favicon and metatags to fantastic beasts and hogwarts pages

--- a/pages/fantastic-beasts.html
+++ b/pages/fantastic-beasts.html
@@ -5,14 +5,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Annie Uchiha" />
-    <meta name="description" content="fantastic-beasts" />
+    <meta name="description" content="fantastic beasts and where to find them" />
     <meta name="keywords" content="fanstastic, beasts" />
+    <link rel="shortcut icon" href="../favicon/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="../favicon/favicon-16x16.png" type="image/png" sizes="16x16" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png" type="image/png" />
+    <link rel="manifest" href="../favicon/site.webmanifest" />
+    <!-- Primary Meta Tags -->
+    <title>Fantastic Beasts and Where To Find Them</title>
+    <meta name="title" content="Fantastic Beasts and Where To Find Them" />
+    <meta name="description" content="Fantastic beasts and where to find them" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="Fantastic Beasts and Where To Find Them" />
+    <meta property="og:description" content="Fantastic beasts and where to find them" />
+    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="Fantastic Beasts and Where To Find Them" />
+    <meta property="twitter:description" content="Fantastic beasts and where to find them" />
+    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
     <title>Fantastic Beasts and Where To Find Them</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/normalize.css" type="text/css" />
     <link rel="stylesheet" href="../css/navbar.css" type="text/css" />
     <link rel="stylesheet" href="../css/fanstastic-beasts.css" type="text/css" />
-
 </head>
 
 <body background="../images/Fantastic_Beasts_and_Where_to_Find_Them_Katherine_521899_2560x1440.jpg">
@@ -38,7 +61,8 @@
         </div>
         <div class="bowtruckle-hide">
             <img src="../images/hide bowtruckle.jpg" alt="hide-bowtruckle" class="bowtruckle-hide__img1" />
-            <img src="../gif/4c10caa8f00ae73f366f2dbb997312fa.gif" alt="bowtruckle" class="bowtruckle-hide__img2" width="520px" />
+            <img src="../gif/4c10caa8f00ae73f366f2dbb997312fa.gif" alt="bowtruckle" class="bowtruckle-hide__img2"
+                width="520px" />
         </div>
         <div class="hippogriff-hide">
             <img src="../images/hide-hippogriff.jpg" alt="hide-hippogriff" class="hippogriff-hide__img1" />
