--- a/pages/hogwarts.html
+++ b/pages/hogwarts.html
@@ -7,6 +7,30 @@
     <meta name="author" content="Annie Uchiha" />
     <meta name="description" content="hogwarts" />
     <meta name="keywords" content="wizard, witch, news" />
+    <link rel="shortcut icon" href="../favicon/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="../favicon/favicon-16x16.png" type="image/png" sizes="16x16" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png" type="image/png" />
+    <link rel="manifest" href="../favicon/site.webmanifest" />
+    <!-- Primary Meta Tags -->
+    <title>Hogwarts</title>
+    <meta name="title" content="Hogwarts" />
+    <meta name="description" content="Hogwarts" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="Hogwarts" />
+    <meta property="og:description" content="Hogwarts" />
+    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="Hogwarts" />
+    <meta property="twitter:description" content="Hogwarts" />
+    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
     <title>Hogwarts</title>
     <script async src="../js/main.js"></script>
     <link rel="stylesheet" href="../css/normalize.css" type="text/css" />
