--- a/pages/quidditch.html
+++ b/pages/quidditch.html
@@ -5,10 +5,33 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Annie Uchiha" />
-  <meta name="description" content="quidditch" />
+  <meta name="description" content="latest of the world of quidditch" />
   <meta name="keywords" content="wizard, witch, news" />
-  <title>Quidditch</title>
+  <link rel="shortcut icon" href="../favicon/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="../favicon/favicon-16x16.png" type="image/png" sizes="16x16" />
+  <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png" type="image/png" />
+  <link rel="manifest" href="../favicon/site.webmanifest" />
+  <!-- Primary Meta Tags -->
+<title>Quidditch</title>
+<meta name="title" content="Quidditch" />
+<meta name="description" content="latest of the world of quidditch" />
 
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://metatags.io/" />
+<meta property="og:title" content="Quidditch" />
+<meta property="og:description" content="latest of the world of quidditch" />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://metatags.io/" />
+<meta property="twitter:title" content="Quidditch" />
+<meta property="twitter:description" content="latest of the world of quidditch" />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
+  <title>Quidditch</title>
   <link rel="stylesheet" href="../css/normalize.css" type="text/css" />
   <link rel="stylesheet" href="../css/navbar.css" type="text/css" />
   <link rel="stylesheet" href="../css/quidditch.css" type="text/css" />
