--- a/pages/hogwarts.html
+++ b/pages/hogwarts.html
@@ -57,6 +57,7 @@
     <img src="../gif/ghost animate/1885315_b5013.gif" alt="ghost-horseman" width="150px" class="ghost-horseman" />
     <main>
         <h1>Memory Game</h1>
+        <!--First row of cards-->
         <div class="flex-container-memory-cards">
             <section class="first-card card-position">
                 <p class="first-card__text card-text">Hogwarts</p>
@@ -92,7 +93,7 @@
                 <img src="../gif/memory game 23 gifs/23.gif" alt="23-image" width="220px" class="23-card__img" />
             </section>
         </div>
-
+        <!--Second row of cards-->
         <div class="flex-container-memory-cards second-row">
             <section class="8-card card-position">
                 <p class="8-card__text card-text">Hogwarts</p>
@@ -127,6 +128,7 @@
                 <img src="../gif/memory game 23 gifs/20.gif" alt="20-image" width="220px" class="20-card__img" />
             </section>
         </div>
+        <!--Third row of cards-->
         <div class="flex-container-memory-cards third-row">
             <section class="seventh-card card-position">
                 <p class="seventh-card__text card-text">Hogwarts</p>
@@ -170,6 +172,7 @@
             <span class="tom-riddle__span" id="greeting"></span>
         </div>
     </footer>
+    <script src="../js/memory-game.js"></script>
 </body>
 
 </html>
