--- a/pages/hogwarts.html
+++ b/pages/hogwarts.html
@@ -59,107 +59,107 @@
         <h1>Memory Game</h1>
         <!--First row of cards-->
         <div class="flex-container-memory-cards">
-            <section class="first-card card-position">
+            <section class="first-card card-position" data-id="1">
                 <p class="first-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/10.gif" alt="first-image" class="first-card__img" />
             </section>
-            <section class="second-card card-position">
+            <section class="second-card card-position" data-id="2">
                 <p class="second-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/12.gif" alt="second-image" class="second-card__img" />
             </section>
-            <section class="third-card card-position">
+            <section class="third-card card-position" data-id="3">
                 <p class="thirds-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/13.gif" alt="second-image" width="220px" class="third-card__img" />
             </section>
-            <section class="forth-card card-position">
+            <section class="forth-card card-position" data-id="4">
                 <p class="forth-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/8.gif" alt="forth-image" width="220px" class="forth-card__img" />
             </section>
-            <section class="fifth-card card-position">
+            <section class="fifth-card card-position" data-id="5">
                 <p class="fifth-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/16.gif" alt="fifth-image" width="220px" class="fifth-card__img" />
             </section>
-            <section class="sixth-card card-position">
+            <section class="sixth-card card-position" data-id="6">
                 <p class="sixth-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/17.gif" alt="sixth-image" width="220px" class="sixth-card__img" />
             </section>
-            <section class="seventh-card card-position">
+            <section class="seventh-card card-position" data-id="7">
                 <p class="seventh-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/18.gif" alt="seventh-image" width="220px"
                     class="seventh-card__img" />
             </section>
-            <section class="23-card card-position">
+            <section class="23-card card-position" data-id="8">
                 <p class="23-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/23.gif" alt="23-image" width="220px" class="23-card__img" />
             </section>
         </div>
         <!--Second row of cards-->
         <div class="flex-container-memory-cards second-row">
-            <section class="8-card card-position">
+            <section class="8-card card-position" data-id="11">
                 <p class="8-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/2.gif" alt="8-image" class="8-card__img" />
             </section>
-            <section class="seventh-card card-position">
+            <section class="seventh-card card-position" data-id="6">
                 <p class="seventh-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/17.gif" alt="seventh-image" class="seventh-card__img" />
             </section>
-            <section class="first-card card-position">
+            <section class="first-card card-position" data-id="1">
                 <p class="first-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/10.gif" alt="first-image" class="first-card__img" />
             </section>
-            <section class="20-card card-position">
+            <section class="20-card card-position" data-id="9">
                 <p class="20-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/20.gif" alt="20-image" width="220px" class="20-card__img" />
             </section>
-            <section class="14-card card-position">
+            <section class="14-card card-position" data-id="10">
                 <p class="14-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/14.gif" alt="14-image" width="220px" class="14-card__img" />
             </section>
-            <section class="19-card card-position">
+            <section class="19-card card-position" data-id="12">
                 <p class="19-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/19.gif" alt="19-image" width="220px" class="19-card__img" />
             </section>
-            <section class="second-card card-position">
+            <section class="second-card card-position" data-id="2">
                 <p class="second-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/12.gif" alt="second-image" class="second-card__img" />
             </section>
-            <section class="20-card card-position">
+            <section class="20-card card-position" data-id="9">
                 <p class="20-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/20.gif" alt="20-image" width="220px" class="20-card__img" />
             </section>
         </div>
         <!--Third row of cards-->
         <div class="flex-container-memory-cards third-row">
-            <section class="seventh-card card-position">
+            <section class="seventh-card card-position" data-id="7">
                 <p class="seventh-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/18.gif" alt="seventh-image" width="220px"
                     class="seventh-card__img" />
             </section>
-            <section class="8-card card-position">
+            <section class="8-card card-position" data-id="11">
                 <p class="8-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/2.gif" alt="8-image" class="8-card__img" />
             </section>
-            <section class="19-card card-position">
+            <section class="19-card card-position" data-id="12">
                 <p class="19-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/19.gif" alt="19-image" width="220px" class="19-card__img" />
             </section>
-            <section class="fifth-card card-position">
+            <section class="fifth-card card-position" data-id="5">
                 <p class="fifth-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/16.gif" alt="fifth-image" width="220px" class="fifth-card__img" />
             </section>
-            <section class="third-card card-position">
+            <section class="third-card card-position" data-id="3">
                 <p class="third-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/13.gif" alt="second-image" width="220px" class="third-card__img" />
             </section>
-            <section class="forth-card card-position">
+            <section class="forth-card card-position" data-id="4">
                 <p class="forth-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/8.gif" alt="forth-image" width="220px" class="forth-card__img" />
             </section>
-            <section class="20-card card-position">
+            <section class="20-card card-position" data-id="10">
                 <p class="20-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/14.gif" alt="20-image" width="220px" class="20-card__img" />
             </section>
-            <section class="23-card card-position">
+            <section class="23-card card-position" data-id="8">
                 <p class="23-card__text card-text">Hogwarts</p>
                 <img src="../gif/memory game 23 gifs/23.gif" alt="23-image" width="220px" class="23-card__img" />
             </section>
