setting up javascript functionality

--- a/pages/hogwarts.html
+++ b/pages/hogwarts.html
@@ -32,7 +32,7 @@
 
     <!-- Meta Tags Generated with https://metatags.io -->
     <title>Hogwarts</title>
-    <script async src="../js/main.js"></script>
+    <script async src="../js/memory-game.js"></script>
     <link rel="stylesheet" href="../css/normalize.css" type="text/css" />
     <link rel="stylesheet" href="../css/navbar.css" type="text/css" />
     <link rel="stylesheet" href="../css/hogwarts.css" type="text/css" />
